# cozy-discord-bot

./: .gitignore  LICENSE  __main__.py  pyproject.toml  readme.md
src/: __init__.py  bot.py  constants.py  converters.py  core.py  epfl_discord_bot.py  errors.py  utils.py
src/cogs/: __init__.py  dev.py  enigma.py  epfl.py  errors.py  info.py  misc.py  mod.py  orga.py  perms.py  remind.py  rooms.py  settings.py
src/engine/: __init__.py  _core.py  converters.py  core.py  errors.py  utils.py
