[tool.poetry]
name = "epfl-discord-bot"
version = "0.1.0"
description = "Utility bot for the EPFL 2020-2021 server"
authors = ["ddorn <diego.dorn@free.fr>"]

[tool.poetry.dependencies]
python = "^3.6"
discord = "^1.0.1"
pyyaml = "^5.0.0"
psutil = "^5.7.0"
ptpython = "^3.0.2"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
